[gd_scene load_steps=12 format=2]

[ext_resource path="res://Cannon/GroundCannon..png" type="Texture" id=1]
[ext_resource path="res://Cannon/Cannon.gd" type="Script" id=2]
[ext_resource path="res://Cannon/shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://Cannon/noshot.wav" type="AudioStream" id=4]
[ext_resource path="res://Missile/Missile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Missile/Indicator.tscn" type="PackedScene" id=6]
[ext_resource path="res://Missile/missile.png" type="Texture" id=7]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Cannon/LowAmmo.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 8 )

[node name="Cannon" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Missile = ExtResource( 5 )
Indicator = ExtResource( 6 )

[node name="Missile1" type="Sprite" parent="."]
position = Vector2( 15, 9 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile2" type="Sprite" parent="."]
position = Vector2( 5, 9 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile3" type="Sprite" parent="."]
position = Vector2( -5, 9 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile4" type="Sprite" parent="."]
position = Vector2( -15, 9 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile5" type="Sprite" parent="."]
position = Vector2( 10, 5 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile6" type="Sprite" parent="."]
position = Vector2( 0, 5 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile7" type="Sprite" parent="."]
position = Vector2( -10, 5 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile8" type="Sprite" parent="."]
position = Vector2( 5, 1 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile9" type="Sprite" parent="."]
position = Vector2( -5, 1 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="Missile10" type="Sprite" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 0.2, 0.12 )
z_index = 1
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -48.0987, 15.3728, -16.7556, -15.9703, -10.593, -10.404, 9.88273, -9.80766, 16.4429, -15.9703, 48.2499, 15.9692 )

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="EmptyAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AmmoText" type="Label" parent="."]
margin_left = -31.0
margin_top = 2.0
margin_right = 32.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowAmmoAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="area_entered" from="." to="." method="_on_Cannon_area_entered"]
